--- a/love.html
+++ b/love.html
@@ -4,8 +4,8 @@
 <head>
     <title> hihi </title>
     <meta charset="UTF-8">
-    <meta name="Keywords" content="爱心代码，程序员表白">
-    <meta name="Description" content="爱心代码，HTML文件，程序员何未来GitHub爱心代码项目">
+    <meta name="Keywords" content="">
+    <meta name="Description" content="">
     <link rel="shortcut icon" href="../picture/爱心.png" type="image/x-icon">
     
     <style>
